2014-12-22  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/stmt.c: Don't use SYM2ID on ruby 2.2.0
	    or later. Symbols passed to SYM2ID are not GC'ed.

2014-12-21  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/object.c, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	  ext/oci8/ocidatetime.c, ext/oci8/ocihandle.c, ext/oci8/ocinumber.c:
	    Use RARRAY_AREF and RARRAY_CONST_PTR for Generational GC.

2014-12-06  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/connection_pool.c, ext/oci8/lob.c, ext/oci8/oci8.c,
	  ext/oci8/stmt.c: Fix "RuntimeError:executing in another thread"
	    when a closed connection is used. This bug was introduced by
	    the previous commit.
	    (github issue #64 reported by Yasuo Honda)

2014-11-16  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/attr.c, ext/oci8/bind.c, ext/oci8/connection_pool.c,
	  ext/oci8/lob.c, ext/oci8/metadata.c, ext/oci8/object.c,
	  ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	  ext/oci8/ocihandle.c, ext/oci8/stmt.c:
	    Raises an exception when a closed OCI8 object is used.
	    Using a closed cursor causes various problems such as segmentation
	    fault, nil comparison error and so on.
	    (github issue #61 and #62 reported by Mike Bourgeous)

2014-02-02  Kubo Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.1.7 and 2.1.6.
	* VERSION: change the version to 2.1.7.

2014-01-25  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, lib/oci8.rb.in: Follow ABI versioning after ruby 2.1.0.

2014-01-19  Kubo Takehiro  <kubo@jiubao.org>
	* docs/install-full-client.md, docs/install-instant-client.md: Change down
	    load URL and filenames in examples.

2014-01-06  Kubo Takehiro  <kubo@jiubao.org>
	* README.md, docs/install-full-client.md, docs/install-instant-client.md,
	  docs/report-installation-issue.md, ext/oci8/oraconf.rb, ruby-oci8.gemspec:
	    Move the project page and download URL to github.

2014-01-05  KUBO Takehiro  <kubo@jiubao.org>